tests/diagnostics/statements/assignments/type_mismatch/expect.txt
# exit: 1
lib.coppice:3:9: error: assignment type mismatch: expected int64, got boolean
      x = true
          ^
